fix cleaning functions

--- a/notebooks/WT_20190711_test_ingest_clean.ipynb
+++ b/notebooks/WT_20190711_test_ingest_clean.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
     "sys.path.append(projectdir)\n",
     "\n",
     "from src.d01_data.ingestion_xtdb import ingest_xtdb\n",
-    "from src.d02_intermediate.clean_xtdb import clean_tables\n",
+    "from src.d02_intermediate.clean_xtdb import *\n",
     "from src.d00_utils.db_utils import *"
    ]
   },
@@ -37,7 +37,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -46,11 +46,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "io_clean = dbReadWriteClean()"
+    "io_raw = dbReadWriteRaw()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>row_id</th>\n",
+       "      <th>instanceidk</th>\n",
+       "      <th>indexinmglist</th>\n",
+       "      <th>frame</th>\n",
+       "      <th>graphictoolidk</th>\n",
+       "      <th>longaxisindex</th>\n",
+       "      <th>measidk</th>\n",
+       "      <th>loopidk</th>\n",
+       "      <th>instancerecordtype</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>57160.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>57160.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>57160.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>57160.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>57162.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   row_id  instanceidk  indexinmglist  frame  graphictoolidk  longaxisindex  \\\n",
+       "0     1.0      57160.0            0.0    0.0             1.0           -1.0   \n",
+       "1     2.0      57160.0            1.0    0.0             2.0           -1.0   \n",
+       "2     3.0      57160.0            2.0    0.0             1.0           -1.0   \n",
+       "3     4.0      57160.0            3.0    0.0             2.0           -1.0   \n",
+       "4     5.0      57162.0            0.0    5.0             2.0           -1.0   \n",
+       "\n",
+       "   measidk  loopidk  instancerecordtype  \n",
+       "0      0.0      0.0                 0.0  \n",
+       "1      0.0      0.0                 0.0  \n",
+       "2      0.0      0.0                 0.0  \n",
+       "3      0.0      0.0                 0.0  \n",
+       "4      0.0      0.0                 0.0  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "io_raw.get_table('a_measgraphic').head()"
    ]
   },
   {
