fixed nan issues

--- a/notebooks/WT_20190711_test_ingest_clean.ipynb
+++ b/notebooks/WT_20190711_test_ingest_clean.ipynb
@@ -17,11 +17,12 @@
     "import sys\n",
     "\n",
     "projectdir = os.path.dirname(os.getcwd())\n",
-    "sys.path.append(projectdir)\n",
+    "sys.path.append(os.path.join(projectdir,'src'))\n",
     "\n",
-    "from src.d01_data.ingestion_xtdb import ingest_xtdb\n",
-    "from src.d02_intermediate.clean_xtdb import *\n",
-    "from src.d00_utils.db_utils import *"
+    "from d01_data.ingestion_xtdb import ingest_xtdb\n",
+    "from d02_intermediate.clean_xtdb import *\n",
+    "from d00_utils.db_utils import *\n",
+    "from d00_utils.s3_utils import *"
    ]
   },
   {
@@ -36,9 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "clean_tables()"
@@ -50,7 +49,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "io_raw = dbReadWriteRaw()"
+    "io_clean = dbReadWriteClean()\n",
+    "io_clean.list_tables()"
    ]
   },
   {
@@ -59,7 +59,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "io_raw.get_table('measurement_abstract_rpt').head()\n"
+    "df = io_clean.get_table('a_measgraphref')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a_measgraphref.isnull().sum(axis=0)"
    ]
   },
   {
