--- a/notebooks/WT_20190627_testing_dicom_metadata_retrieval_on_ec2.ipynb
+++ b/notebooks/WT_20190627_testing_dicom_metadata_retrieval_on_ec2.ipynb
@@ -35,7 +35,10 @@
     "import s3fs\n",
     "\n",
     "import tempfile\n",
-    "import io"
+    "import io\n",
+    "\n",
+    "projectdir = os.path.dirname(os.getcwd())\n",
+    "sys.path.append(os.path.join(projectdir,'src'))"
    ]
   },
   {
@@ -77,17 +80,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_dicom_metadata(bucket, object_path):\n",
+    "def get_dicom_metadata(bucket, file_path, description=False):\n",
     "    \n",
     "    s3 = boto3.client('s3')\n",
     "    tmp = tempfile.NamedTemporaryFile()\n",
     "\n",
     "    # Dump metadata of file to temp file\n",
-    "    s3.download_file(bucket, object_path, tmp.name)\n",
+    "    s3.download_file(bucket, file_path, tmp.name)\n",
     "    os.system('gdcmdump '+ tmp.name +' > temp.txt')\n",
     "\n",
-    "    dir_name = object_path.split('/')[0]\n",
-    "    file_name = object_path.split('/')[1].split('.')[0]\n",
+    "    dir_name = file_path.split('/')[0]\n",
+    "    file_name = file_path.split('/')[1].split('.')[0]\n",
     "\n",
     "    # Parse temp.txt file to extract tags\n",
     "    temp_file='temp.txt'\n",
@@ -102,7 +105,10 @@
     "                elif not clean_line.startswith('#'): # ignore comment lines:\n",
     "                    tag1 = clean_line[1:5]\n",
     "                    tag2 = clean_line[6:10]\n",
-    "                    value = clean_line[16:clean_line.find('#')].strip()\n",
+    "                    if description == False:\n",
+    "                        value = clean_line[15:clean_line.find('#')].strip().replace('[','')\n",
+    "                    elif description == True:\n",
+    "                        value = clean_line[clean_line.find('#')+2:].strip()\n",
     "                    line_meta=[dir_name, file_name, tag1, tag2, value]\n",
     "                    meta.append(line_meta)\n",
     "            except IndexError:\n",
@@ -111,7 +117,7 @@
     "    df = pd.DataFrame.from_records(meta, columns=['dirname','filename','tag1','tag2','value'])\n",
     "    df_dedup = df.drop_duplicates(keep='first')\n",
     "    df_dedup_goodvals = df_dedup[~df_dedup.value.str.contains('no value')]\n",
-    "    df_dedup_goodvals_short = df_dedup_goodvals[df_dedup_goodvals['value'].str.len()<50]\n",
+    "    df_dedup_goodvals_short = df_dedup_goodvals[(df_dedup_goodvals['value'].str.len()>0)&(df_dedup_goodvals['value'].str.len()<50)]\n",
     "    \n",
     "    return df_dedup_goodvals_short"
    ]
@@ -221,10 +227,37 @@
     "t1 = time.time()\n",
     "for key in get_matching_s3_keys('cibercv','100000','.dcm'): \n",
     "    df = get_dicom_metadata('cibercv', key)\n",
-    "    write_dicom_metadata(df)\n",
-    "os.remove('temp.txt')\n",
+    "    write_dicom_metadata(df, 'test')\n",
+    "#os.remove('temp.txt')\n",
     "t2 = time.time()\n",
     "print(t2-t1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf = pd.read_csv(os.path.join(projectdir,'data','02_intermediate','dicom_metadata_test.csv'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf['tags'] = list(zip(tf['tag1'],tf['tag2']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf[tf['tags']==('fffe','e000')]"
    ]
   },
   {
@@ -274,33 +307,6 @@
    "source": [
     "os.system('gdcmdump '+ dirpath +' > temp.txt')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "48.611111111111114"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "7*25000/3600"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
