fixed incorrect metadata ingestion and added functionality to write to postgres

--- a/notebooks/WT_20190627_testing_dicom_metadata_retrieval_on_ec2.ipynb
+++ b/notebooks/WT_20190627_testing_dicom_metadata_retrieval_on_ec2.ipynb
@@ -38,7 +38,25 @@
     "import io\n",
     "\n",
     "projectdir = os.path.dirname(os.getcwd())\n",
-    "sys.path.append(os.path.join(projectdir,'src'))"
+    "sys.path.append(os.path.join(projectdir,'src'))\n",
+    "\n",
+    "from d01_data.ingestion_dcm import ingest_dcm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test existing dcm metadata ingest function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ingest_dcm('postgres','39555')"
    ]
   },
   {
