--- a/notebooks/WT_20190717_download_decompress_dicom.ipynb
+++ b/notebooks/WT_20190717_download_decompress_dicom.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,98 +29,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['meta_lite', 'measurement_abstract_rpt', 'a_measgraphref', 'a_measgraphic', 'dm_spain_view_study_summary', 'a_modvolume', 'instance_filename']\n"
-     ]
-    }
-   ],
-   "source": [
-    "io_clean = dbReadWriteClean()\n",
-    "io_clean.list_tables()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/wiebke_toussaint/anaconda3/envs/dssg/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3248: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  if (await self.run_code(code, result,  async_=asy)):\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "29.501980781555176\n"
-     ]
-    }
-   ],
-   "source": [
-    "t1 = time()\n",
-    "meta_lite = io_clean.get_table('meta_lite')\n",
-    "print(time() - t1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "s3keys = get_matching_s3_keys('cibercv','100000/a_6MI50JZH')"
+    "io_views = dbReadWriteViews()\n",
+    "io_views.list_tables()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a_6MI50JZH.dcm_raw\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "instances_with_labels_scrappy100 = io_views.get_table('instances_with_labels_scrappy100')\n",
+    "instances_with_labels_scrappy100.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "instances_labeled_other_scrappy100 = io_views.get_table('instances_labeled_other_scrappy100')\n",
+    "instances_labeled_other_scrappy100.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for k in s3keys: print(k.split('/')[1]+'_raw')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['100000', 'a_6MI50JZH']"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'100000/a_6MI50JZH'.split('/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +119,7 @@
     "                # Download and convert dicom file to raw format\n",
     "                tmp = tempfile.NamedTemporaryFile()\n",
     "                s3.download_file(bucket, obj['Key'], tmp.name)\n",
-    "                os.system('gdcmconv -w ' + tmp.name + \" \" + os.path.join(data_dir, outrawfilename))\n",
+    "#                os.system('gdcmconv -w ' + tmp.name + \" \" + os.path.join(data_dir, outrawfilename))\n",
     "\n",
     "        try:\n",
     "            kwargs['ContinuationToken'] = resp['NextContinuationToken']\n",
@@ -167,22 +131,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "makedirs() missing 1 required positional argument: 'name'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-52-c793b5c1223a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mextract_imgs_from_dicom\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'cibercv'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'100000/a_6MI50JZH'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-51-3836ded21c12>\u001b[0m in \u001b[0;36mextract_imgs_from_dicom\u001b[0;34m(bucket, prefix, suffix)\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0mdata_dir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprojectdir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'data'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'01_raw'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'dicom_images'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmakedirs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexist_ok\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprefix\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: makedirs() missing 1 required positional argument: 'name'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "extract_imgs_from_dicom('cibercv','100000/a_6MI50JZH')"
    ]
