--- a/notebooks/WT_20190717_download_decompress_dicom.ipynb
+++ b/notebooks/WT_20190717_download_decompress_dicom.ipynb
@@ -11,7 +11,6 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import boto3\n",
-    "import feather\n",
     "import tempfile\n",
     "from time import time\n",
     "\n",
@@ -62,15 +61,8 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "for k in s3keys: print(k.split('/')[1]+'_raw')"
+    "prefix_labelled = instances_with_labels_scrappy100['studyidk'].astype(str) + '/a_' + instances_with_labels_scrappy100['instancefilename'].astype(str)"
    ]
   },
   {
@@ -79,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'100000/a_6MI50JZH'.split('/')"
+    "prefix_other = instances_labeled_other_scrappy100['studyidk'].astype(str) + '/a_' + instances_labeled_other_scrappy100['instancefilename'].astype(str)"
    ]
   },
   {
@@ -88,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def extract_imgs_from_dicom(bucket, prefix='', suffix='.dcm'):\n",
+    "def extract_imgs_from_dicom(bucket, prefix='', suffix='.dcm', outdir=None):\n",
     "    \"\"\"\n",
     "    Get all the keys with a specific suffix from a s3 bucket.\n",
     "\n",
@@ -102,25 +94,32 @@
     "    keys = []\n",
     "    kwargs = {'Bucket': bucket}\n",
     "\n",
-    "    data_dir = os.path.join(projectdir, 'data', '01_raw','dicom_images')\n",
-    "    os.makedirs(data_dir, exist_ok=True)\n",
+    "#    data_dir = os.path.join(projectdir, 'data', '01_raw','dicom_images')\n",
+    "#    os.makedirs(data_dir, exist_ok=True)\n",
+    "    os.makedirs(outdir, exist_ok=True)\n",
     "\n",
     "    if isinstance(prefix, str):\n",
     "        kwargs['Prefix'] = prefix\n",
     "\n",
     "    while True:\n",
     "        resp = s3.list_objects_v2(**kwargs)\n",
-    "        for obj in resp['Contents']:\n",
-    "            if obj['Key'].startswith(prefix) and obj['Key'].endswith(suffix):\n",
-    "                keys.append(obj['Key'])\n",
+    "        try:\n",
+    "            for obj in resp['Contents']:\n",
+    "                if obj['Key'].startswith(prefix) and obj['Key'].endswith(suffix):\n",
+    "                    keys.append(obj['Key'])\n",
     "\n",
-    "                outrawfilename = prefix.split('/')[1]+'_raw'\n",
+    "    #                outrawfilename = prefix.split('/')[1]+'_raw'\n",
     "\n",
-    "                # Download and convert dicom file to raw format\n",
-    "                tmp = tempfile.NamedTemporaryFile()\n",
-    "                s3.download_file(bucket, obj['Key'], tmp.name)\n",
-    "#                os.system('gdcmconv -w ' + tmp.name + \" \" + os.path.join(data_dir, outrawfilename))\n",
+    "                    # Download and convert dicom file to raw format\n",
+    "    #                tmp = tempfile.NamedTemporaryFile()\n",
+    "    #                s3.download_file(bucket, obj['Key'], tmp.name)\n",
+    "    #                os.system('gdcmconv -w ' + tmp.name + \" \" + os.path.join(data_dir, outrawfilename))\n",
     "\n",
+    "                    s3.download_file(bucket, obj['Key'], os.path.join(lablelled_datadir, \n",
+    "                                                                      'a_' + ''.join(p.split('/a')) + '.dcm'))\n",
+    "        except:\n",
+    "            print(prefix, 'DOWNLOAD ERROR')\n",
+    "        \n",
     "        try:\n",
     "            kwargs['ContinuationToken'] = resp['NextContinuationToken']\n",
     "        except KeyError:\n",
@@ -135,7 +134,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "extract_imgs_from_dicom('cibercv','100000/a_6MI50JZH')"
+    "lablelled_datadir = os.path.expanduser('/home/ubuntu/data/01_raw/dcm_sample_labelled')\n",
+    "lablelled_datadir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "other_datadir = os.path.expanduser('/home/ubuntu/data/01_raw/dcm_sample_other')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for p in prefix_labelled.values:\n",
+    "    print(os.path.join(lablelled_datadir,  'a_' + ''.join(p.split('/a')) + '.dcm'))\n",
+    "    extract_imgs_from_dicom('cibercv', prefix=p, suffix='.dcm', outdir=lablelled_datadir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for p in prefix_other.values:\n",
+    "    print(os.path.join(other_datadir, 'a_' + ''.join(p.split('/a')) + '.dcm'))\n",
+    "    extract_imgs_from_dicom('cibercv', prefix=p, suffix='.dcm', outdir=other_datadir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for f in get_matching_s3_keys('cibercv', '81864'): print(f)"
    ]
   },
   {
@@ -148,9 +188,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dssg",
+   "display_name": "echocv",
    "language": "python",
-   "name": "dssg"
+   "name": "echocv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -162,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
