replaced metadata `value` field from \ to -- for postgres handling

--- a/notebooks/WT_20190627_testing_dicom_metadata_retrieval_on_ec2.ipynb
+++ b/notebooks/WT_20190627_testing_dicom_metadata_retrieval_on_ec2.ipynb
@@ -40,7 +40,8 @@
     "projectdir = os.path.dirname(os.getcwd())\n",
     "sys.path.append(os.path.join(projectdir,'src'))\n",
     "\n",
-    "from d01_data.ingestion_dcm import ingest_dcm"
+    "from d01_data.ingestion_dcm import ingest_dcm\n",
+    "from d00_utils.db_utils import *"
    ]
   },
   {
@@ -56,7 +57,106 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ingest_dcm('postgres','39555')"
+    "ingest_dcm('postgres','100000')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path = '100000/a_6MI50JZH'\n",
+    "dir_name = file_path.split('/')[0]\n",
+    "file_name = file_path.split('/')[1].split('.')[0]\n",
+    "\n",
+    "description=False\n",
+    "temp_file='temp.txt'\n",
+    "meta = []\n",
+    "with open(temp_file, 'r') as f:\n",
+    "    line_meta = []\n",
+    "    for one_line in f:            \n",
+    "        try:\n",
+    "            clean_line = one_line.replace(']','').strip()\n",
+    "            if not clean_line: # ignore empty lines\n",
+    "                continue\n",
+    "            elif not clean_line.startswith('#'): # ignore comment lines:\n",
+    "                tag1 = clean_line[1:5]\n",
+    "                tag2 = clean_line[6:10]\n",
+    "                if description == False:\n",
+    "                    value = clean_line[15:clean_line.find('#')].strip().replace('[','')\n",
+    "                elif description == True:\n",
+    "                    value = clean_line[clean_line.find('#')+2:].strip()\n",
+    "                line_meta=[dir_name, file_name, tag1, tag2, value]\n",
+    "                meta.append(line_meta)\n",
+    "        except IndexError:\n",
+    "            break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame.from_records(meta, columns=['dirname','filename','tag1','tag2','value'])\n",
+    "df_dedup = df.drop_duplicates(keep='first')\n",
+    "df_dedup_goodvals = df_dedup[~df_dedup.value.str.contains('no value')]\n",
+    "df_dedup_goodvals_short = df_dedup_goodvals[(df_dedup_goodvals['value'].str.len()>0)&\n",
+    "                                            (df_dedup_goodvals['value'].str.len()<50)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_dedup_goodvals_short.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dff = df_dedup_goodvals_short.replace({'value': {r'\\\\':'--', '\\|':','}}, regex=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dff#.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dff.to_csv('TEST.csv', encoding='utf-8', decimal='.', index=False, sep='|', na_rep='')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "io_raw = dbReadWriteRaw()\n",
+    "\n",
+    "connection = io_raw.engine.raw_connection()\n",
+    "cursor = connection.cursor()           \n",
+    "\n",
+    "with open('TEST.csv', 'r') as f:\n",
+    "    next(f) # Skip the header row.\n",
+    "    cursor.copy_from(f, '{}.{}'.format(io_raw.schema, 'metadata'), sep='|', size=100000, null='') \n",
+    "    connection.commit()"
    ]
   },
   {
