--- a/notebooks/WT_test_d00_utils.ipynb
+++ b/notebooks/WT_test_d00_utils.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Notebook for testing utils functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
