--- a/notebooks/WT_test_d01_download_dicom.ipynb
+++ b/notebooks/WT_test_d01_download_dicom.ipynb
@@ -188,9 +188,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "echocv",
+   "display_name": "dssg",
    "language": "python",
-   "name": "echocv"
+   "name": "dssg"
   },
   "language_info": {
    "codemirror_mode": {
@@ -202,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
