adding IOU testing notebook to dev

--- a/notebooks/20190727_CI_Summary_table_clean_and_EDA.ipynb
+++ b/notebooks/20190727_CI_Summary_table_clean_and_EDA.ipynb
@@ -1175,7 +1175,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mydssgenv",
+   "display_name": "dssg",
    "language": "python",
    "name": "dssg"
   },
