updated notebook for prototyping

--- a/notebooks/20190708_DVV_filter_views_testbed.ipynb
+++ b/notebooks/20190708_DVV_filter_views_testbed.ipynb
@@ -2,6 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/dave_van_veen/dicom_image_classification/notebooks\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "print(os.getcwd())\n",
+    "import sys\n",
+    "sys.path.append('../src/d00_utils/')\n",
+    "\n",
+    "from db_utils import dbReadWriteViews"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "io_views = dbReadWriteViews()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
