--- a/notebooks/20190717_DVV_build_m1_dataset.ipynb
+++ b/notebooks/20190717_DVV_build_m1_dataset.ipynb
@@ -2028,10 +2028,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sopinstanceuid</th>\n",
+       "      <th>instancefilename</th>\n",
+       "      <th>instanceidk</th>\n",
+       "      <th>view</th>\n",
+       "      <th>studyidk</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.2.840.113663.1500.1.365900332.3.3.20120703.9...</td>\n",
+       "      <td>8Z0BWWL5</td>\n",
+       "      <td>696108</td>\n",
+       "      <td>plax</td>\n",
+       "      <td>39531</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.2.840.113663.1500.1.365900332.3.4.20120703.9...</td>\n",
+       "      <td>8Z0BWX0M</td>\n",
+       "      <td>696109</td>\n",
+       "      <td>plax</td>\n",
+       "      <td>39531</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.2.840.113663.1500.1.365900332.3.7.20120703.9...</td>\n",
+       "      <td>8Z0BWZGH</td>\n",
+       "      <td>696112</td>\n",
+       "      <td>a4c</td>\n",
+       "      <td>39531</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.2.840.113663.1500.1.365900332.3.1.20120703.9...</td>\n",
+       "      <td>8Z0BXKCB</td>\n",
+       "      <td>696140</td>\n",
+       "      <td>plax</td>\n",
+       "      <td>39533</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.2.840.113663.1500.1.365900332.3.14.20120703....</td>\n",
+       "      <td>8Z0BXYUW</td>\n",
+       "      <td>696157</td>\n",
+       "      <td>plax</td>\n",
+       "      <td>39533</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                      sopinstanceuid instancefilename  \\\n",
+       "0  1.2.840.113663.1500.1.365900332.3.3.20120703.9...         8Z0BWWL5   \n",
+       "1  1.2.840.113663.1500.1.365900332.3.4.20120703.9...         8Z0BWX0M   \n",
+       "2  1.2.840.113663.1500.1.365900332.3.7.20120703.9...         8Z0BWZGH   \n",
+       "3  1.2.840.113663.1500.1.365900332.3.1.20120703.9...         8Z0BXKCB   \n",
+       "4  1.2.840.113663.1500.1.365900332.3.14.20120703....         8Z0BXYUW   \n",
+       "\n",
+       "   instanceidk  view  studyidk  \n",
+       "0       696108  plax     39531  \n",
+       "1       696109  plax     39531  \n",
+       "2       696112   a4c     39531  \n",
+       "3       696140  plax     39533  \n",
+       "4       696157  plax     39533  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "label_inst_df.head()"
+   ]
   }
  ],
  "metadata": {
