--- a/notebooks/WT_test_d02_dicom_metadata_processing.ipynb
+++ b/notebooks/WT_test_d02_dicom_metadata_processing.ipynb
@@ -263,9 +263,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dssg",
+   "display_name": "Environment (conda_usal_echo)",
    "language": "python",
-   "name": "dssg"
+   "name": "conda_usal_echo"
   },
   "language_info": {
    "codemirror_mode": {
@@ -277,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
