--- a/notebooks/WT_test_d01_download_dicom.ipynb
+++ b/notebooks/WT_test_d01_download_dicom.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Notebook to test download of dicom images\n",
+    "*author: Wiebke Toussaint*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -42,44 +50,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "instances_with_labels_scrappy100 = io_views.get_table('instances_with_labels_scrappy100')\n",
-    "instances_with_labels_scrappy100.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "instances_labeled_other_scrappy100 = io_views.get_table('instances_labeled_other_scrappy100')\n",
-    "instances_labeled_other_scrappy100.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prefix_labelled = instances_with_labels_scrappy100['studyidk'].astype(str) + '/a_' + instances_with_labels_scrappy100['instancefilename'].astype(str)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prefix_other = instances_labeled_other_scrappy100['studyidk'].astype(str) + '/a_' + instances_labeled_other_scrappy100['instancefilename'].astype(str)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def extract_imgs_from_dicom(bucket, prefix='', suffix='.dcm', outdir=None):\n",
     "    \"\"\"\n",
     "    Get all the keys with a specific suffix from a s3 bucket.\n",
@@ -94,8 +64,6 @@
     "    keys = []\n",
     "    kwargs = {'Bucket': bucket}\n",
     "\n",
-    "#    data_dir = os.path.join(projectdir, 'data', '01_raw','dicom_images')\n",
-    "#    os.makedirs(data_dir, exist_ok=True)\n",
     "    os.makedirs(outdir, exist_ok=True)\n",
     "\n",
     "    if isinstance(prefix, str):\n",
@@ -107,21 +75,14 @@
     "            for obj in resp['Contents']:\n",
     "                if obj['Key'].startswith(prefix) and obj['Key'].endswith(suffix):\n",
     "                    keys.append(obj['Key'])\n",
-    "\n",
-    "    #                outrawfilename = prefix.split('/')[1]+'_raw'\n",
-    "\n",
-    "                    # Download and convert dicom file to raw format\n",
-    "    #                tmp = tempfile.NamedTemporaryFile()\n",
-    "    #                s3.download_file(bucket, obj['Key'], tmp.name)\n",
-    "    #                os.system('gdcmconv -w ' + tmp.name + \" \" + os.path.join(data_dir, outrawfilename))\n",
-    "\n",
-    "                    s3.download_file(bucket, obj['Key'], os.path.join(lablelled_datadir, \n",
+    "                    s3.download_file(bucket, obj['Key'], os.path.join(outdir, \n",
     "                                                                      'a_' + ''.join(p.split('/a')) + '.dcm'))\n",
     "        except:\n",
     "            print(prefix, 'DOWNLOAD ERROR')\n",
     "        \n",
     "        try:\n",
     "            kwargs['ContinuationToken'] = resp['NextContinuationToken']\n",
+    "        \n",
     "        except KeyError:\n",
     "            break\n",
     "\n",
@@ -129,13 +90,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "lablelled_datadir = os.path.expanduser('/home/ubuntu/data/01_raw/dcm_sample_labelled')\n",
-    "lablelled_datadir"
+    "### Download Sample Dicom Images"
    ]
   },
   {
@@ -144,6 +102,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "instances_with_labels_scrappy100 = io_views.get_table('instances_with_labels_scrappy100')\n",
+    "instances_labeled_other_scrappy100 = io_views.get_table('instances_labeled_other_scrappy100')\n",
+    "\n",
+    "prefix_labelled = instances_with_labels_scrappy100['studyidk'].astype(str) + '/a_' + instances_with_labels_scrappy100['instancefilename'].astype(str)\n",
+    "prefix_other = instances_labeled_other_scrappy100['studyidk'].astype(str) + '/a_' + instances_labeled_other_scrappy100['instancefilename'].astype(str)\n",
+    "\n",
+    "lablelled_datadir = os.path.expanduser('/home/ubuntu/data/01_raw/dcm_sample_labelled')\n",
     "other_datadir = os.path.expanduser('/home/ubuntu/data/01_raw/dcm_sample_other')"
    ]
   },
@@ -154,43 +119,18 @@
    "outputs": [],
    "source": [
     "for p in prefix_labelled.values:\n",
-    "    print(os.path.join(lablelled_datadir,  'a_' + ''.join(p.split('/a')) + '.dcm'))\n",
-    "    extract_imgs_from_dicom('cibercv', prefix=p, suffix='.dcm', outdir=lablelled_datadir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    extract_imgs_from_dicom('cibercv', prefix=p, suffix='.dcm', outdir=lablelled_datadir)\n",
+    "    \n",
     "for p in prefix_other.values:\n",
-    "    print(os.path.join(other_datadir, 'a_' + ''.join(p.split('/a')) + '.dcm'))\n",
     "    extract_imgs_from_dicom('cibercv', prefix=p, suffix='.dcm', outdir=other_datadir)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for f in get_matching_s3_keys('cibercv', '81864'): print(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dssg",
+   "display_name": "Environment (conda_usal_echo)",
    "language": "python",
-   "name": "dssg"
+   "name": "conda_usal_echo"
   },
   "language_info": {
    "codemirror_mode": {
@@ -202,7 +142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
