resolved commit comments

--- a/notebooks/WT_test_d01_download_decompress_dicom.ipynb
+++ b/notebooks/WT_test_d01_download_decompress_dicom.ipynb
@@ -79,9 +79,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Environment (conda_usal_echo)",
+   "display_name": "Environment (conda_yoni)",
    "language": "python",
-   "name": "conda_usal_echo"
+   "name": "conda_yoni"
   },
   "language_info": {
    "codemirror_mode": {
