--- a/notebooks/WT_test_d02_dicom_metadata_processing.ipynb
+++ b/notebooks/WT_test_d02_dicom_metadata_processing.ipynb
@@ -21,7 +21,7 @@
     "import pandas as pd\n",
     "from sqlalchemy import create_engine\n",
     "from json import load\n",
-    "import psycopg2"
+    "#import psycopg2"
    ]
   },
   {
@@ -42,9 +42,9 @@
     "datadir = os.path.join(projectdir, 'data')\n",
     "metadata_path = os.path.join(datadir, '02_intermediate','dicom_metadata.csv')\n",
     "\n",
-    "from src.d01_data import dicom_metadata\n",
+    "from src.d00_utils import dcm_utils\n",
     "from src.d00_utils.s3_utils import get_matching_s3_keys\n",
-    "from src.d00_utils.db_utils import save_to_db"
+    "from src.d00_utils.db_utils import dbReadWriteRaw, dbReadWriteClean"
    ]
   },
   {
@@ -199,7 +199,90 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "meta = dicom_metadata.get_meta_lite(dicom_tags, metadata_path)"
+    "io_clean = dbReadWriteClean()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "io_clean.engine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "io_clean = dbReadWriteClean()\n",
+    "\n",
+    "with open(os.path.join(projectdir, 'src', 'd02_intermediate', 'dicom_tags.json')) as f:\n",
+    "    dicom_tags = load(f)\n",
+    "for k, v in dicom_tags.items():\n",
+    "    dicom_tags[k] = tuple(v)\n",
+    "    print(k, v[0])\n",
+    "    query = \"SELECT m.* FROM raw.metadata AS m WHERE m.tag1 = {} and m.tag2 = {}\"#.format(v[0], v[1])\n",
+    "    df = pd.read_sql_query(query, con=io_clean.engine, chunksize=100000)\n",
+    "    io_clean.save_to_db(df, 'meta_test', if_exists=\"append\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_dcm(metadata_path, to_db=False, credentials_file=None, db_table=None):\n",
+    "    # Get dicom tags and metadata path from config file(s)\n",
+    "    with open(\"dicom_tags.json\") as f:\n",
+    "        dicom_tags = load(f)\n",
+    "    for k, v in dicom_tags.items():\n",
+    "        dicom_tags[k] = tuple(v)\n",
+    "\n",
+    "    io_clean = dbReadWriteClean()\n",
+    "\n",
+    "    datalist = []\n",
+    "    # Read metadata in chunks to avoid kernel crashing due to large data volume.\n",
+    "    for chunk in pd.read_csv(\n",
+    "        metadata_path,\n",
+    "        chunksize=1000000,\n",
+    "        dtype={\n",
+    "            \"dirname\": \"category\",\n",
+    "            \"filename\": \"category\",\n",
+    "            \"tag1\": \"category\",\n",
+    "            \"tag2\": \"category\",\n",
+    "        },\n",
+    "    ):\n",
+    "        chunk[\"tags\"] = list(zip(chunk[\"tag1\"], chunk[\"tag2\"]))\n",
+    "        filtered_chunk = chunk[chunk[\"tags\"].isin(dicom_tags.values())]\n",
+    "        if to_db is True:\n",
+    "            try:\n",
+    "                io_clean.save_to_db(filtered_chunk, db_table, if_exists=\"append\")\n",
+    "            except:\n",
+    "                raise\n",
+    "            print(\"saved chunks to db\")\n",
+    "        datalist.append(filtered_chunk)\n",
+    "\n",
+    "    meta = pd.concat(datalist)\n",
+    "\n",
+    "    return meta\n",
+    "\n",
+    "\n",
+    "query = '''\n",
+    "        SELECT * FROM raw.metadata m WHERE m.tag1 = b.key1 and m.tag2 = b.key2\n",
+    "        '''\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "meta = clean_dcm(dicom_tags, metadata_path)"
    ]
   },
   {
